Fix wrapping on long site titles; Bump Version No.

--- a/scss/parts/_structure.scss
+++ b/scss/parts/_structure.scss
@@ -22,6 +22,7 @@
 .site-branding {
     flex: 1 1;
     padding: 10px;
+    min-width: 100px;
 }
 
 .site-title {
@@ -30,7 +31,6 @@
     font-weight: 400;
     line-height: 1;
     margin: 0;
-    white-space: nowrap;
     
     a {
         color: $white;
